[package]
name = "sigq"
version = "0.9.1"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "concurrency", "asynchronous" ]
keywords = [ "threads", "sync" ]
repository = "https://github.com/openqrnch/sigq"
description = "Queue that signals waiting consumers about node availability."

[features]

[dependencies]
